--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* background: rgb(62, 62, 62);
+background: rgba(162, 162, 162, 0.697);
+background: rgb(170, 170, 170);
+background: rgb(231, 231, 231); */
+html {
+background: rgb(75, 75, 75);
+  background: linear-gradient(172deg, rgba(75, 75, 75, 1) 0%, rgba(14, 14, 14, 1) 100%);  color: rgb(231, 231, 231);
+  font-size: large;
+  font-weight: 100;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  border: none;
+  outline: none;
+  font-size: large;
+  padding: 0.5rem 2rem;
+  border-radius: 5px;
+  background: rgba(162, 162, 162, 0.697);
+  color: rgb(231, 231, 231);
+  cursor: pointer;
+}
+
+button:hover {
+  background: rgb(192, 192, 192);
+  color: rgb(255, 255, 255);
+  transition: all;
+  transition-duration: 300ms;
+}
+
+input {
+  border: none;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  background: rgb(170, 170, 170);
+}
+
+.form {
+  position: relative;
+  background: linear-gradient(6deg, rgba(75, 75, 75, 1) 0%, rgba(14, 14, 14, 0.534) 100%);
+  max-width: 400px;
+  min-height: 450px;
+  margin: 20px auto;
+  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.5);
+  padding: 2rem;
+  border-radius: .5rem;
+  font-family: Arial
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem
 }
