--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@ background: rgba(162, 162, 162, 0.697);
 background: rgb(170, 170, 170);
 background: rgb(231, 231, 231); */
 html {
-background: rgb(75, 75, 75);
-  background: linear-gradient(172deg, rgba(75, 75, 75, 1) 0%, rgba(14, 14, 14, 1) 100%);  color: rgb(231, 231, 231);
+  background: rgb(75, 75, 75);
+  background: linear-gradient(172deg, rgba(75, 75, 75, 1) 0%, rgba(14, 14, 14, 1) 100%);
+  color: rgb(231, 231, 231);
   font-size: large;
   font-weight: 100;
   height: 100%;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 button {
@@ -31,9 +33,14 @@ button:hover {
 input {
   border: none;
   height: 2.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-radius: 5px;
   background: rgb(170, 170, 170);
+  padding-left: 10px;
+}
+
+input:placeholder {
+  padding-left: 10px;
 }
 
 .form {
